--- a/Frontend/src/app/property/property-list/property-list.component.html
+++ b/Frontend/src/app/property/property-list/property-list.component.html
@@ -1,3 +1,5 @@
-<p>
-  property-list works!
-</p>
+<div class="row">
+  <div *ngFor="let property of properties" class="shadow-lg col-sm-4 p-3">
+    <aap-property-card [property]="property"></aap-property-card>
+  </div>
+</div>
