--- a/Frontend/src/app/property/property-card/property-card.component.css
+++ b/Frontend/src/app/property/property-card/property-card.component.css
@@ -1,3 +1,34 @@
-.PropertyImg{
-height: 300;
+.card-img-wrapper{
+  overflow: hidden;
+  position: relative;
+}
+.card:hover img{
+  transform:  scale(1.2,1.2);
+  transition-duration: 500ms;
+  transition-timing-function: ease-in-out;
+  height: 230px;
+  opacity: 0.5;
+}
+.card img{
+  transform:  scale(1,1);
+  transition-duration: 500ms;
+  transition-timing-function: ease-in-out;
+  height: 230px;
+}
+.member-icons{
+  position: absolute;
+  bottom: -10%;
+  left: 0;
+  right: 0;
+  margin-right: auto;
+  margin-left: auto;
+  opacity: 0;
+}
+
+.card-img-wrapper:hover .member-icons{
+  bottom: 0;
+  opacity: 1;
+}
+.animation{
+  transition: all 0.3s ease-in-out;
 }
