--- a/Frontend/src/app/property/property-card/property-card.component.html
+++ b/Frontend/src/app/property/property-card/property-card.component.html
@@ -1,5 +1,15 @@
 <div class="card">
-  <img class="PropertyImg" src="assets/images/House_Clip.png" alt="">
+  <div class="card-img-wrapper">
+    <img class="card-img-top" src="assets/images/House_Clip.png" alt="">
+    <ul class="list-inline text-center member-icons animation">
+      <li class="list-inline-item">
+        <button class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i></button>
+      </li>
+      <li class="list-inline-item">
+        <button class="btn btn-primary"><i class="fa-solid fa-address-book"></i></button>
+      </li>
+    </ul>
+  </div>
   <div class="card-body p-2">
     <h1>{{property.Name}}</h1>
     <h2>{{property.Type}}</h2>
