--- a/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -18,17 +18,39 @@
       </ul>
       <div>
         <ul class="nav navbar-nav">
-          <li class="nav-item">
+          <li *ngIf="!loggedin()" class="nav-item">
             <a class="nav-link"
             routerLink="userRegister"
             routerLinkActive="active"
             >Register</a>
           </li>
-          <li class="nav-item">
+          <li *ngIf="!loggedin()" class="nav-item">
             <a class="nav-link"
             routerLink="userLogin"
             routerLinkActive="active">Login</a>
           </li>
+          <!-- <li *ngIf="loggedin()" class="nav-item">
+            <a class="nav-link" (click)="onLogout()">Logout</a>
+          </li> -->
+          <div *ngIf="loggedin()" class="dropdown me-5" dropdown>
+            <a href="#" class="dropdown-toggle text-light" dropdownToggle (click)="false">
+              Welcome {{loggedinUser}}
+            </a>
+            <div class="dropdown-menu" *dropdownMenu>
+              <a href="#" class="dropdown-item">
+                <i class="fas fa-tachometer-alt"></i>View Dashboard
+              </a>
+              <a href="#" class="dropdown-item">
+                <i class="fas fa-user-circle"></i>My Profile
+              </a>
+              <a href="#" class="dropdown-item">
+                <i class="fas fa-key"></i>Change password
+              </a>
+              <a (click)="onLogout()" class="dropdown-item">
+                <i class="fas fa-sign-out-alt"></i>Logout
+              </a>
+            </div>
+          </div>
         </ul>
       </div>
     </div>
