--- a/Frontend/src/app/property/add-property/add-property.component.html
+++ b/Frontend/src/app/property/add-property/add-property.component.html
@@ -20,10 +20,10 @@
       <div class="form-group col-12">
         <label for="price">Price</label>
         <input type="text" class="form-control" ngModel name="Price">
-      </div><br>
+      </div>
       <div class="form-group col-12">
-        <button [disabled]="!Form.valid" type="submit" class="btn btn-success m-2">Save</button>
-        <button type="reset" class="btn btn-danger">Cancel</button>
+        <button [disabled]="!Form.valid" type="submit" class="btn btn-success">Save</button>
+        <button type="reset" class="btn btn-danger m-2">Cancel</button>
       </div>
     </form>
   </div>
