--- a/Frontend/src/app/user/user-register/user-register.component.html
+++ b/Frontend/src/app/user/user-register/user-register.component.html
@@ -62,10 +62,9 @@
               </span>
             </span>
           </div>
-          <br>
           <div class="form-group col-12">
-            <button type="submit" class="btn btn-success m-2">Save</button>
-            <button type="reset" class="btn btn-danger">Cancel</button>
+            <button type="submit" class="btn btn-success">Save</button>
+            <button type="reset" class="btn btn-danger m-2">Cancel</button>
           </div>
           <!-- Form Values:{{registrationForm.value | json}}<br />
           Form Status:{{registrationForm.valid}} -->
