--- a/Frontend/src/app/property/add-property/add-property.component.html
+++ b/Frontend/src/app/property/add-property/add-property.component.html
@@ -1,30 +1,194 @@
-<div class="card">
-  <div class="card-header">
-    Add New Property
+<div class="row mb-5">
+  <div class="col-8 shadow-lg p-0 bg-white">
+    <div class="card">
+      <div class="card-header">
+        <h3>List your Property</h3>
+      </div>
+      <div class="card-body">
+        <form (ngSubmit)='onSubmit()' #Form="ngForm">
+          <div class="tab-panel">
+            <tabset class="member-tabset" #formTabs>
+              <tab heading="Basic info" ngModelGroup="BasicInfo" #BasicInfo="ngModelGroup">
+
+                <div class="form-group col-12">
+                  <p>I want to</p>
+                  <div class="btn-group" btnRadioGroup ngModel name="SellRent" required>
+                    <label class="btn btn-outline-primary m-1" btnRadio="1" role="button" name="SellRent">Sell</label>
+                    <label class="btn btn-outline-primary m-1" btnRadio="2" role="button" name="SellRent">Rent</label>
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <p>BHK</p>
+                  <div class="btn-group" btnRadioGroup name="numberofRooms" [(ngModel)]="propertyView.BHK">
+                    <label *ngFor="let bhk of numberofRoom" class="btn btn-outline-primary m-1" [btnRadio]="bhk"
+                      tabindex="0" role="button" name="SellRent">{{bhk}}</label>
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <p>Property Type</p>
+                  <div class="btn-group" btnRadioGroup name="propType" [(ngModel)]="propertyView.PType">
+                    <label *ngFor="let ptype of propertyType" class="btn btn-outline-primary m-1" [btnRadio]="ptype"
+                      tabindex="0" role="button" name="SellRent">{{ptype}}</label>
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <p>Furnishing Type</p>
+                  <div class="btn-group" btnRadioGroup name="furnishingType" [(ngModel)]="propertyView.FType">
+                    <label *ngFor="let ftype of furnishType" class="btn btn-outline-primary m-1" [btnRadio]="ftype"
+                      tabindex="0" role="button" name="SellRent">{{ftype}}</label>
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <label for="name">in Building/Socity/Project</label>
+                  <input type="text" class="form-control" #propName="ngModel" ngModel name="propName" required
+                    minlength="5" [(ngModel)]="propertyView.Name">
+                  <span *ngIf="!propName.valid && propName.touched" class="error-block">
+                    <span *ngIf="propName.errors['required']">Please provid valid name</span>
+                    <span *ngIf="propName.errors['minlength']">Name shoulld be grater 5 than char</span>
+                  </span>
+                </div>
+
+                <div class="form-group col-12">
+                  <label for="city">City</label>
+                  <input type="text" class="form-control" name="city" [(ngModel)]="propertyView.City">
+                </div><br>
+                <div class="d-grid gap-2">
+                  <button class="btn btn-primary" type="button" (click)="selectTab(1)" [disabled]="!BasicInfo.valid">Next</button>
+                </div>
+              </tab>
+              <tab heading="Pricing and Area">
+                <div class="form-group col-12">
+                  <label>Price (in USD)</label>
+                  <input type="text" class="form-control" #propName="ngModel" ngModel name="propPrice" required
+                    [(ngModel)]="propertyView.Price">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Security (in USD)</label>
+                  <input type="text" class="form-control">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Maintenance (in USD)</label>
+                  <input type="text" class="form-control">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Built Area (in Sqr Feet)</label>
+                  <input type="text" class="form-control"
+                  name="builtArea"
+                [(ngModel)]="propertyView.BuiltArea">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Carpet Area(in Sqr Feet)</label>
+                  <input type="text" class="form-control">
+                </div><br>
+                <div class="d-grid gap-2">
+                  <button class="btn btn-primary" type="button" (click)="selectTab(2)">Next</button>
+                  <button class="btn btn-primary" type="button" (click)="selectTab(0)">Back</button>
+                </div>
+              </tab>
+              <tab heading="Address">
+                <div class="form-group col-12">
+                  <label>Floor</label>
+                  <input type="text" class="form-control">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Total Floor</label>
+                  <input type="text" class="form-control">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Address</label>
+                  <input type="text" class="form-control">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Landmark</label>
+                  <input type="text" class="form-control">
+                </div><br>
+                <div class="d-grid gap-2">
+                  <button class="btn btn-primary" type="button" (click)="selectTab(3)">Next</button>
+                  <button class="btn btn-primary" type="button" (click)="selectTab(1)">Back</button>
+                </div>
+              </tab>
+              <tab heading="Other Details">
+                <div class="form-group col-12">
+                  <p>Ready to move</p>
+                  <div class="btn-group" btnRadioGroup>
+                    <label class="btn btn-outline-primary m-1" btnRadio="1" role="button" name="">Yes</label>
+                    <label class="btn btn-outline-primary m-1" btnRadio="2" role="button" name="">No</label>
+                  </div>
+                </div>
+
+                <div class="form-group col-3">
+                  <label>Possession/Avaialble From</label>
+                  <input type="text" placeholder="Datepicker" class="form-control" bsDatepicker
+                    [bsConfig]="{containerClass:'theme-dark-blue'}">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Age of Property</label>
+                  <input type="text" class="form-control">
+                </div>
+
+                <div class="form-group col-12">
+                  <p>Gated Community</p>
+                  <div class="btn-group" btnRadioGroup>
+                    <label class="btn btn-outline-primary m-1" btnRadio="1" role="button" name="">Yes</label>
+                    <label class="btn btn-outline-primary m-1" btnRadio="2" role="button" name="">No</label>
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <p>Main Entrence</p>
+                  <div class="btn-group" btnRadioGroup>
+                    <label *ngFor="let entry of mainEntrence" class="btn btn-outline-primary m-1" [btnRadio]="entry"
+                      tabindex="0" role="button" name="SellRent">{{entry}}</label>
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Description</label>
+                  <textarea type="text" class="form-control" rows="6"></textarea>
+                </div><br>
+                <div class="d-grid gap-2">
+                  <button class="btn btn-primary" type="button" (click)="selectTab(4)">Next</button>
+                  <button class="btn btn-primary" type="button" (click)="selectTab(2)">Back</button>
+                </div>
+              </tab>
+              <tab heading="Photos">
+                <div class="form-group col-12">
+                  <div class="photo-control">
+                    <button class="mt-5" type="button">Upload</button> <br>
+                    This is under construction
+                  </div>
+                </div><br>
+                <div class="d-grid gap-2">
+                  <button class="btn btn-primary" type="button" (click)="selectTab(3)">Back</button>
+                  <button type="submit" class="btn btn-success">Save</button>
+                  <button type="reset" class="btn btn-danger">Cancel</button>
+                </div>
+              </tab>
+            </tabset>
+          </div>
+
+        </form>
+      </div>
+    </div>
   </div>
-  <div class="card-body">
-    <form (ngSubmit)='onSubmit(Form)' #Form="ngForm">
-      <div class="form-group col-12">
-        <label for="name">Name</label>
-        <input type="text" class="form-control" #propName="ngModel"
-        ngModel name="Name" required minlength="5">
-        <span *ngIf="!propName.valid && propName.touched" class="error-block">
-          <span *ngIf="propName.errors['required']">Please provid valid name</span>
-          <span *ngIf="propName.errors['minlength']">Name shoulld be grater 5 than char</span>
-        </span>
-      </div>
-      <div class="form-group col-12">
-        <label for="type">Type</label>
-        <input type="text" class="form-control" ngModel name="Type">
-      </div>
-      <div class="form-group col-12">
-        <label for="price">Price</label>
-        <input type="text" class="form-control" ngModel name="Price">
-      </div>
-      <div class="form-group col-12">
-        <button [disabled]="!Form.valid" type="submit" class="btn btn-success">Save</button>
-        <button type="reset" class="btn btn-danger m-2">Cancel</button>
-      </div>
-    </form>
+  <div class="col-4">
+    <div class="card-header">
+      <h3>Your Property Privew</h3>
+    </div>
+    <div class="shadow-lg p-3 bg-white">
+      <aap-property-card [property]="propertyView" [hideIcon]="true"></aap-property-card>
+    </div>
   </div>
 </div>
