logout with confirmation

--- a/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -46,7 +46,7 @@
               <a href="#" class="dropdown-item">
                 <i class="fas fa-key"></i>Change password
               </a>
-              <a (click)="onLogout()" class="dropdown-item">
+              <a (click)="openDialog()" class="dropdown-item">
                 <i class="fas fa-sign-out-alt"></i>Logout
               </a>
             </div>
