--- a/Frontend/src/app/property/property-card/property-card.component.html
+++ b/Frontend/src/app/property/property-card/property-card.component.html
@@ -18,12 +18,12 @@
     <span *ngIf="property.Name">,</span>
     {{property.City}}
 
-    <h6 class="mt-2">{{property.FType}}
+    <h5 class="mt-2">{{property.FType}}
       <span *ngIf="property.FType !== 'Unfurnished'">Furnished</span>
       | Ready to Move
-    </h6>
+    </h5>
     <hr class="mt-0 mb-2">
-    <h6 class="mb-0">Price: <span>{{property.Price}} USD.</span> |
-      Area: <span>{{property.BuiltArea}} Sq Ft</span></h6>
+    <h5 class="mb-0">Price: <span class="font-highlight">{{property.Price}} USD.</span> |
+      Area: <span class="font-highlight">{{property.BuiltArea}} Sq Ft</span></h5>
   </div>
 </div>
