--- a/Frontend/src/app/property/add-property/add-property.component.html
+++ b/Frontend/src/app/property/add-property/add-property.component.html
@@ -143,54 +143,65 @@
                   <button class="btn btn-primary" type="button" (click)="selectTab(0, PriceInfo.valid)">Back</button>
                 </div>
               </tab>
-              <tab heading="Address">
+              <tab heading="Address" formGroupName="AddressInfo">
                 <div class="form-group col-12">
                   <label>Floor</label>
-                  <input type="text" class="form-control">
+                  <input type="text" formControlName="FloorNo" class="form-control">
                 </div>
 
                 <div class="form-group col-12">
                   <label>Total Floor</label>
-                  <input type="text" class="form-control">
+                  <input type="text"  formControlName="TotalFloor" class="form-control">
                 </div>
 
                 <div class="form-group col-12">
                   <label>Address</label>
-                  <input type="text" class="form-control">
+                  <input type="text"  formControlName="Address" class="form-control">
+                  <div class="error-block"
+                  *ngIf="Address.invalid && (nextClicked || Address.touched)">
+                    Please select address
+                  </div>
                 </div>
 
                 <div class="form-group col-12">
                   <label>Landmark</label>
-                  <input type="text" class="form-control">
+                  <input type="text" formControlName="LandMark" class="form-control">
                 </div><br>
                 <div class="d-grid gap-2">
                   <button class="btn btn-primary" type="button" (click)="selectTab(3, AddressInfo.valid)">Next</button>
                   <button class="btn btn-primary" type="button" (click)="selectTab(1, AddressInfo.valid)">Back</button>
                 </div>
               </tab>
-              <tab heading="Other Details">
+              <tab heading="Other Details" formGroupName="OtherInfo">
                 <div class="form-group col-12">
                   <label>Ready to move</label><br>
-                  <div class="btn-group" btnRadioGroup>
+                  <div class="btn-group" formControlName="RTM" btnRadioGroup>
                     <label class="btn btn-outline-primary m-1" btnRadio="1" role="button" name="">Yes</label>
                     <label class="btn btn-outline-primary m-1" btnRadio="2" role="button" name="">No</label>
+                  </div>
+                  <div class="error-block" *ngIf="RTM.invalid && nextClicked">
+                    Please select ready to move
                   </div>
                 </div>
 
                 <div class="form-group col-3">
                   <label>Possession/Avaialble From</label>
-                  <input type="text" class="form-control" bsDatepicker
+                  <input type="text" formControlName="PossessionOn" class="form-control" bsDatepicker
                     [bsConfig]="{containerClass:'theme-dark-blue'}">
+                    <div class="error-block" *ngIf="PossessionOn.invalid
+                    && (nextClicked || PossessionOn.touched)">
+                    Please select establishment/possession date
+                  </div>
                 </div>
 
                 <div class="form-group col-12">
                   <label>Age of Property</label>
-                  <input type="text" class="form-control">
+                  <input type="text" formControlName="AOP" class="form-control">
                 </div>
 
                 <div class="form-group col-12">
                   <label> Gated community</label><br>
-                  <div class="btn-group" btnRadioGroup>
+                  <div class="btn-group" formControlName="Gated" btnRadioGroup>
                     <label class="btn btn-outline-primary m-1" btnRadio="1" role="button" name="">Yes</label>
                     <label class="btn btn-outline-primary m-1" btnRadio="2" role="button" name="">No</label>
                   </div>
@@ -198,7 +209,7 @@
 
                 <div class="form-group col-12">
                   <label>Main Entrance</label><br>
-                  <div class="btn-group" btnRadioGroup>
+                  <div class="btn-group" formControlName="MainEntrance" btnRadioGroup>
                     <label *ngFor="let entry of mainEntrence" class="btn btn-outline-primary m-1" [btnRadio]="entry"
                       tabindex="0" role="button" name="SellRent">{{entry}}</label>
                   </div>
@@ -206,7 +217,7 @@
 
                 <div class="form-group col-12">
                   <label>Description</label>
-                  <textarea type="text" class="form-control" rows="6"></textarea>
+                  <textarea type="text" formControlName="Description" class="form-control" rows="6"></textarea>
                 </div><br>
                 <div class="d-grid gap-2">
                   <button class="btn btn-primary" type="button" (click)="selectTab(4, OtherInfo.valid)">Next</button>
