--- a/Frontend/src/app/property/property-detail/property-detail.component.html
+++ b/Frontend/src/app/property/property-detail/property-detail.component.html
@@ -1,11 +1,27 @@
-<p>
-  Selected Property Id is {{propertyId}}
-  <br> <br>
-  <button (click)="onSelectNext()" class="btn btn-success">Select Next Page</button>
-  <br> <br>
-  <button routerLink="/property-detail/1" class="btn btn-primary">1</button>
-  <button routerLink="/property-detail/2" class="btn btn-primary">2</button>
-  <button routerLink="/property-detail/3" class="btn btn-primary">3</button>
-  <button [routerLink]="['/property-detail','4']" class="btn btn-primary">4</button>
-
-</p>
+<div class="row shadow">
+  <div class="col-sm-4 p-0">
+    <div class="card">
+      <div class="card-img-wrapper">
+        <img class="card-img-top" src="assets/images/prop-1.png">
+      </div>
+      <div class="card-body">
+      </div>
+      <div class="card-footer">
+        <div class="btn-group d-flex">
+          <button class="btn btn-primary">Like</button>
+          <button class="btn btn-success">Message</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-8 p-0">
+    <div class="tab-panel">
+      <tabset class="member-tabset">
+        <tab heading="Overview"></tab>
+        <tab heading="Address"></tab>
+        <tab heading="Photos"></tab>
+        <tab heading="Contact"></tab>
+      </tabset>
+    </div>
+  </div>
+</div>
