--- a/Frontend/src/app/property/property-list/property-list.component.html
+++ b/Frontend/src/app/property/property-list/property-list.component.html
@@ -1,3 +1,4 @@
+Current Date:{{today | date:'fullDate'}}
 <div class="row">
   <div *ngFor="let property of properties" class="shadow-lg col-md-4 p-2">
     <aap-property-card [property]="property"></aap-property-card>
