--- a/Frontend/src/app/user/user-login/user-login.component.html
+++ b/Frontend/src/app/user/user-login/user-login.component.html
@@ -1,6 +1,7 @@
 <div class="row">
-  <div class="col-6 m-auto">
-    <div class="card m-auto">
+  <div class="col-12 col-sm-6  m-auto">
+
+    <div class="card">
       <div class="card-header">
         Login
       </div>
