--- a/Frontend/src/app/property/add-property/add-property.component.html
+++ b/Frontend/src/app/property/add-property/add-property.component.html
@@ -92,8 +92,8 @@
                   [(ngModel)]="propertyView.City" placeholder="--Select City--">
                   <option value=''>--Select City--</option>
                   <option *ngFor="let city of cityList"
-                  value={{city}}>
-                    {{city}}
+                  value={{city.id}}>
+                    {{city.name}}
                   </option>
                   </select>
                   <div class="error-block"
